--- a/index.html
+++ b/index.html
@@ -25,45 +25,47 @@
         </nav>
     </header>
 
-    <main>
-        <section class="hero">
-            <h2>Welcome to Mtimande Trade and Project Solutions</h2>
-            <p>Your trusted partner for event management, equipment hire, and more!</p>
-        </section>
+    <!-- Home Section with Welcome Message -->
+    <section class="home-section" style="background-image: url('images/Mtimande\ picture.jpg'); background-size: cover;">
+        <div class="content">
+            <h1>Welcome to <span>Mtimande</span></h1>
+            <p>Your one-stop solution for events, transportation, and equipment hire.</p>
+            <p>We are here to make your events stress-free and successful. Let's work together!</p>
+            <div class="btnArea">
+                <button onclick="location.href='contact.html'" class="btn">Contact Us</button>
+                <button onclick="location.href='about.html'" class="btn">Learn More</button>
+            </div>
+        </div>
+    </section>
 
-        <section class="services">
-            <div class="service-card">
-                <img src="images/event.jpg" alt="Event">
-                <h3>Events</h3>
-                <p>Let us help you organize and manage your events.</p>
-            </div>
-            <div class="service-card">
-                <img src="images/transportation.jpg" alt="Transportation">
-                <h3>Transportation</h3>
-                <p>Reliable and efficient transport solutions for your needs.</p>
-            </div>
-            <div class="service-card">
-                <img src="images/toilet.jpg" alt="Toilets">
-                <h3>Toilets for Hire</h3>
-                <p>Clean and well-maintained toilets for all events.</p>
-            </div>
-            <div class="service-card">
-                <img src="images/fridge.jpg" alt="Fridges">
-                <h3>Fridges for Hire</h3>
-                <p>Ensure your food and drinks stay fresh during events.</p>
-            </div>
-            <div class="service-card">
-                <img src="images/catering.jpg" alt="Catering Equipment">
-                <h3>Catering Equipment</h3>
-                <p>Equip your event with quality catering tools.</p>
-            </div>
-        </section>
-    </main>
-
+    <!-- Footer -->
     <footer>
-        <p>&copy; 2025 Mtimande Trade and Project Solutions. All rights reserved.</p>
+        <div class="footer-content">
+            <div class="contact-info">
+                <p><i class="fa fa-phone"></i> Call: +01 12345678990</p>
+                <p><i class="fa fa-envelope"></i> Email: info@mtimande.com</p>
+                <p><i class="fa fa-map-marker"></i> Location: City Center, Your City</p>
+            </div>
+            <div class="quick-links">
+                <h3>Quick Links</h3>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="events.html">Services</a></li>
+                    <li><a href="contact.html">Contact</a></li>
+                </ul>
+            </div>
+            <div class="newsletter">
+                <h3>Sign Up for Our Newsletter</h3>
+                <form action="#" method="post">
+                    <input type="email" placeholder="Enter Your Email" required>
+                    <button type="submit">Subscribe</button>
+                </form>
+            </div>
+        </div>
+        <div class="footer-bottom">
+            <p>&copy; 2025 Mtimande Trade and Project Solutions. All Rights Reserved.</p>
+        </div>
     </footer>
-
-    <script src="js/scripts.js"></script>
 </body>
 </html>
