--- a/transportation.html
+++ b/transportation.html
@@ -90,7 +90,7 @@
             <div>
                 <h3>Contact Us</h3>
                 <p><i class="fa fa-phone"></i> +27 123 456 7890</p>
-                <p><i class="fa fa-envelope"></i> info@mtimande.com</p>
+                <p><i class="fa fa-envelope"></i> thulasmp@gmail.com</p>
                 <p><i class="fa fa-map-marker"></i> South Africa</p>
             </div>
             <div>
