--- a/fridges.html
+++ b/fridges.html
@@ -42,7 +42,7 @@
             </ul>
         </div>
         <div class="image">
-            <img src="mobile-fridge.jpg" alt="Mobile Fridge">
+            <img src="images/Mtimande Fridge.jpg" alt="Mobile Fridge">
         </div>
     </section>
 
