--- a/index.html
+++ b/index.html
@@ -32,25 +32,34 @@
             <p>Your one-stop solution for events, transportation, and equipment hire.</p>
             <p>We are here to make your events stress-free and successful. Let's work together!</p>
             <div class="btnArea">
-                <button onclick="location.href='contact.html'" class="btn">Contact Us</button>
-                <button onclick="location.href='about.html'" class="btn">Learn More</button>
+                <button onclick="toggleContent()" class="btn">Learn More</button>
             </div>
-        </div>
+            <div id="moreContent" ></div>
+                <h2>About Us</h2>
+                <p>We provide innovative solutions in event management, transportation, and equipment hire. Our team ensures quality and efficiency in every project we handle.</p>
+                <h3>Our Core Values</h3>
+                <ul>
+                    <li>Reliability</li>
+                    <li>Customer Satisfaction</li>
+                    <li>Innovation</li>
+                    <li>Integrity</li>
+                </ul>
+            </div>
+            
     </section>
 
     <!-- Footer -->
     <footer>
         <div class="footer-content">
             <div class="contact-info">
-                <p><i class="fa fa-phone"></i> Call: +01 12345678990</p>
-                <p><i class="fa fa-envelope"></i> Email: info@mtimande.com</p>
-                <p><i class="fa fa-map-marker"></i> Location: City Center, Your City</p>
+                <p><i class="fa fa-phone"></i> Call: +27 82 678 3343/+27 82 433 5370/+27 61 802 3452</p>
+                <p><i class="fa fa-envelope"></i> Email: info@Mtimandetps.co.za</p>
+                <p><i class="fa fa-map-marker"></i> Location: 6A Smuts street Meyerviee, Standerton 2430</p>
             </div>
             <div class="quick-links">
                 <h3>Quick Links</h3>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
                     <li><a href="events.html">Services</a></li>
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
