--- a/transportation.html
+++ b/transportation.html
@@ -67,14 +67,29 @@
                     <li>Airport transfers</li>
                     <li>Corporate shuttle services</li>
                     <li>Group travel solutions</li>
+                    <li>Abnormal loads </li>
+                    <li>plant Hire</li>
+                    <li>mining</li>
+                    <li>storage</li>
                 </ul>
-                <a href="fleet.html" class="btn">View Our Fleet</a>
+                <button class="btn" onclick="openModal()">View Our Fleet</button>
             </div>
             <div class="image-content">
-                <img src="images/transportation.jpg" alt="Transportation Services">
+                <img src="images/Transport1.jpg" alt="Transportation Services">
             </div>
         </div>
     </section>
+
+    <!-- Modal Section -->
+    <div id="fleetModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <img src="images/Tarnsport2.jpg" alt="Fleet 1">
+            <img src="images/Truck 1.png" alt="Fleet 2">
+            <img src="images/Transport 4.jpg" alt="Fleet 3">
+        </div>
+    </div>
+    
 
     <!-- Footer -->
     <footer>
@@ -90,7 +105,7 @@
             <div>
                 <h3>Contact Us</h3>
                 <p><i class="fa fa-phone"></i> +27 123 456 7890</p>
-                <p><i class="fa fa-envelope"></i> thulasmp@gmail.com</p>
+                <p><i class="fa fa-envelope"></i> info@Mtimandetps.co.za</p>
                 <p><i class="fa fa-map-marker"></i> South Africa</p>
             </div>
             <div>
