--- a/contact.html
+++ b/contact.html
@@ -60,10 +60,10 @@
     <!-- Contact Information Section -->
     <section class="contact-info">
         <h2>Our Contact Information</h2>
-        <p><i class="fa fa-phone"></i> Call us: +27 123 456 7890</p>
-        <p><i class="fa fa-envelope"></i> Email: info@mtimande.com</p>
-        <p><i class="fa fa-map-marker"></i> Address: City Center, South Africa</p>
-        <div class="social-links">
+        <div class="contact-info">
+            <p><i class="fa fa-phone"></i> Call: +27 82 678 3343/+27 82 433 5370/+27 61 802 3452</p>
+            <p><i class="fa fa-envelope"></i> Email: info@Mtimandetps.co.za</p>
+            <p><i class="fa fa-map-marker"></i> Location: 6A Smuts street Meyerviee, Standerton 2430</p>
             <a href="#" class="fa fa-facebook"></a>
             <a href="#" class="fa fa-twitter"></a>
             <a href="#" class="fa fa-instagram"></a>
