--- a/transportation.html
+++ b/transportation.html
@@ -117,5 +117,6 @@
         </div>
         <p class="footer-bottom">&copy; 2025 Mtimande Trade and Project Solutions</p>
     </footer>
+    <script src="js/script.js"></script>
 </body>
 </html>
