--- a/toilets.html
+++ b/toilets.html
@@ -65,11 +65,10 @@
                     <li><a href="contact.html">Contact</a></li>
                 </ul>
             </div>
-            <div>
-                <h3>Contact Us</h3>
-                <p><i class="fa fa-phone"></i> +27 123 456 7890</p>
-                <p><i class="fa fa-envelope"></i> info@mtimande.com</p>
-                <p><i class="fa fa-map-marker"></i> South Africa</p>
+            <div class="contact-info">
+                <p><i class="fa fa-phone"></i> Call: +27 82 678 3343/+27 82 433 5370/+27 61 802 3452</p>
+                <p><i class="fa fa-envelope"></i> Email: info@Mtimandetps.co.za</p>
+                <p><i class="fa fa-map-marker"></i> Location: 6A Smuts street Meyerviee, Standerton 2430</p>
             </div>
             <div>
                 <h3>Follow Us</h3>
