--- a/transportation.html
+++ b/transportation.html
@@ -95,13 +95,14 @@
     <footer>
         <div class="footer-content">
             <div>
-                <h3>Quick Links</h3>
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="about.html">About Us</a></li>
-                    <li><a href="contact.html">Contact</a></li>
-                </ul>
-            </div>
+                <div class="quick-links">
+                    <h3>Quick Links</h3>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="events.html">Services</a></li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </div>
             <div>
                 <h3>Contact Us</h3>
                 <p><i class="fa fa-phone"></i> +27 123 456 7890</p>
@@ -117,6 +118,6 @@
         </div>
         <p class="footer-bottom">&copy; 2025 Mtimande Trade and Project Solutions</p>
     </footer>
-    <script src="js/script.js"></script>
+    <script src="js/transportation.js"></script>
 </body>
 </html>
