added a booking page for transportation

--- a/transportation.html
+++ b/transportation.html
@@ -30,7 +30,7 @@
         <div class="hero-text">
             <h1>Reliable Transportation Services</h1>
             <p>Ensuring your travel needs are met with comfort, safety, and efficiency.</p>
-            <a href="book-transport.html" class="btn">Book Transportation</a>
+            <a href="booking.html" class="btn">Book Transportation</a>
         </div>
     </section>
 
