changed the home page

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <header>
         <nav class="navbar">
             <div class="logo">
+                <img src="images/Mtimande picture.jpg" alt="Mtimande Logo">
                 <h1>Mtimande Trade and Project Solutions</h1>
             </div>
             <div class="icon-bar">
@@ -25,9 +26,9 @@
         </nav>
     </header>
 
-    <!-- Home Section with Welcome Message -->
-    <section class="home-section" style="background-image: url('images/Mtimande\ picture.jpg'); background-size: cover;">
-        <div class="content">
+    <!-- Hero Section with Welcome Message -->
+    <section class="hero">
+        <div class="hero-text">
             <h1>Welcome Kwa <span>Mtimande</span></h1>
             <p>Your one-stop solution for events, transportation, and equipment hire.</p>
             <p>We are here to make your events stress-free and successful. Let's work together!</p>
@@ -47,7 +48,6 @@
             <p>Catering is at the heart of what we do, and we pride ourselves on delivering delicious and varied menus tailored to your needs. Whether you’re hosting a small gathering or a large-scale event, we provide exceptional food that leaves a lasting impression.</p>
             <p>To ensure your event runs smoothly, we offer additional services such as premium fridge rentals for keeping your beverages and perishables at the perfect temperature, as well as clean and fully serviced executive toilet facilities for hire.</p>
             <p>When it comes to entertainment, our sound systems and DJ services will set the tone and keep the energy high throughout your event. From intimate gatherings to large parties, we ensure your guests are entertained and your event runs effortlessly.</p>
-            <p>At Mtimande Trading & Projects, our commitment to quality and customer satisfaction ensures that every event is memorable and stress-free, allowing you to focus on what truly matters—enjoying the occasion.</p>
             <h3>Our Core Values</h3>
             <ul>
                 <li>Reliability</li>
@@ -62,7 +62,7 @@
     <footer>
         <div class="footer-content">
             <div class="contact-info">
-                <p><i class="fa fa-phone"></i> Call: +27 82 678 3343/+27 82 433 5370/+27 61 802 3452</p>
+                <p><i class="fa fa-phone"></i> Call: +27 82 678 3343 / +27 82 433 5370 / +27 61 802 3452</p>
                 <p><i class="fa fa-envelope"></i> Email: info@Mtimandetps.co.za</p>
                 <p><i class="fa fa-map-marker"></i> Location: 6A Smuts street Meyerviee, Standerton 2430</p>
             </div>
